--- a/基本設計/課題02.md
+++ b/基本設計/課題02.md
@@ -19,17 +19,19 @@
   * OSはLinux
   * サーバ上で動くシステムの要件は以下の通り
     * CPU4コア、メモリ8GB、ストレージ30GB
-  * 暗号化は不要
+  * 暗号化が必要
   * ネットワークは既存Vnet上に構築してほしい
     * 他のサーバと同じところで良い
 * 非機能要件
   * 店舗の営業時間は水曜日・木曜日を除く10時〜20時
   * 拡張性の考慮は不要
-  * 
+  * 店内PCと従業員スマホのみアクセス出来るようにしたい
+    * 一般ユーザのアクセスは拒否してほしい
+    * 従業員スマホは、店内ルータにWiFiでアクセスしており、モバイルデータ通信は行っていない
   * 受注データは日次でバックアップが必要
     * 毎晩に取ってほしい
     * バックアップ作業が必要になった場合は、当社に依頼頂く
-  * 給与計算中にインフラレイヤでエラーが出た際は、メールで連携がほしい
+  * 営業日の日中にインフラレイヤでエラーが出た際は、メールで連絡が欲しい
 
 # 期待する成果物
 
@@ -39,5 +41,5 @@
 # 営業からの引き継ぎコメント
 
 * ITに精通した人材がおらず、当社へ依頼頂いております。
-* 発注者は人事担当者。高度な話のヒアリングは難しいかもしれません。
+* 発注者は店長。ITについて高度な話のヒアリングは難しいかもしれません。
 * ソフトウェアの要件は、営業からソフトウェアベンダーにヒアリング出来ます。
